[package]
name = "ryu-gateway"
version = "0.0.9"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "ryu-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
genai = "0.6.5"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
regex = "1"
dashmap = "6"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
dirs = "5"
http = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
rusqlite = { version = "0.40.0", features = ["bundled"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Extracted gateway stage crates (decomposition W6, first extraction). The budget
# stage is its own package; `ryu-gw-contracts` holds cross-stage value-types
# (AlertTier) so peer stages never depend on each other. Re-exported by
# `src/config.rs` and `src/budget.rs` so existing `crate::{config,budget}::…`
# paths are byte-unchanged.
ryu-gw-contracts = { path = "../../crates/gateway/contracts" }
ryu-gw-budget = { path = "../../crates/gateway/budget" }
# The evals stage (live EvalsRunner + EvalsBackend trait/registry + dataset
# scorers). Re-exported by `src/config.rs` (EvalsConfig) and `src/evals.rs`.
ryu-gw-evals = { path = "../../crates/gateway/evals" }
# The audit stage (SQLite AuditLogger + AuditBackend trait/registry + record/
# query types). Re-exported by `src/config.rs` (AuditConfig) and `src/audit.rs`.
ryu-gw-audit = { path = "../../crates/gateway/audit" }
# The cache stage (exact-match TTL Cache + embedding-similarity SemanticCache,
# each a swappable trait + registry, plus the shared embed helpers). Re-exported
# by `src/config.rs` (Cache/SemanticCacheConfig) and `src/{cache,semantic_cache}.rs`.
ryu-gw-cache = { path = "../../crates/gateway/cache" }
# The firewall scanning core (pure regex detection engine: curated pattern
# builders, DetectionKind/FirewallMatch scan types, Unicode-normalization
# pre-pass, Luhn/credit-card/public-IPv4 validators, plus the command-injection
# scanner). Re-exported by `src/firewall/mod.rs`; the FirewallScanner /
# FirewallBackend / FirewallRegistry wiring stays in apps/gateway.
ryu-gw-firewall = { path = "../../crates/gateway/firewall" }
# The passthrough wire-format redaction engine (native Anthropic/Responses
# request-body + streaming-SSE DLP redaction over a narrow `PassthroughFirewall`
# interface, plus upstream URL/path helpers and the `WireFormat` marker).
# Re-exported by `src/passthrough/mod.rs`; the reverse-proxy `forward`
# orchestration + `PassthroughBackend`/`PassthroughRegistry` wiring stay in apps/gateway.
ryu-gw-passthrough = { path = "../../crates/gateway/passthrough" }
# The concrete backend providers (OpenAI/Anthropic/local/core/OpenRouter/Modal/
# GenAI/Replicate/Fal HTTP impls + the `Provider` trait + shared provider HTTP
# helpers + the per-provider quota sink + the video-job value types). The
# `ProviderRegistry` + config-driven registration + key custody stay in
# `src/providers/mod.rs`; the trait returns a crate-local `ProviderError` mapped
# to `GatewayError` at the pipeline boundary (src/error.rs). Re-exported by
# `src/providers/mod.rs`, `src/quota.rs`, and `src/jobs.rs` so existing
# `crate::{providers,quota,jobs}::…` paths are byte-unchanged.
ryu-gw-providers = { path = "../../crates/gateway/providers" }
# The marketplace-governance crypto core (pure grant-allowlist matching + ed25519
# manifest sign/verify over a canonicalized JSON encoding, taking explicit keys /
# allowlists). Re-exported by `src/governance/mod.rs`; the signing-key custody
# (env source-of-truth + dev-persisted disk key + process OnceLock) and the
# default grant allowlist policy stay in apps/gateway (the marketplace trust root).
ryu-gw-governance = { path = "../../crates/gateway/governance" }
# The model-routing core (Plane A): pure model->provider resolution over provider
# *strings* — the route() order (exact->prefix->builtin->default), the built-in
# prefix table, modality-slot resolution, the cost-tier fallback sort, the eval
# A/B explore/exploit picker, and the classifier text helpers. The `ModelRouter`/
# `SmartRouter` structs (config snapshot + `RoutingTables` build), the
# `RouterRegistry`/`SmartRouterBackend` traits + registration, `RouteDecision` +
# config value-types, the A/B `AtomicU64` counter, and SmartRouter's async
# provider/embedding orchestration stay in apps/gateway ('engine moves, wiring
# stays'). Re-exported by `src/router/mod.rs`.
ryu-gw-router = { path = "../../crates/gateway/router" }

# The channel-layer engine: the external messaging-surface transport adapters
# (Telegram long-poll, Slack Socket Mode, Discord poll, WhatsApp webhook) + the
# shared inbound path (allowlist gate, request-body build, reply extraction) over
# a narrow `ChannelHost` seam. The `RequestContext` construction + `pipeline::run`
# call, the control-plane store fetch, and channel registration/spawn stay in
# apps/gateway (`src/channels_host.rs`) — they hold `SharedState` and drive the
# pipeline ('engine moves, wiring stays'). `GroupReplyMode` is re-exported by
# `src/config.rs` so the config-file channel structs keep it as a field type.
ryu-gw-channels = { path = "../../crates/gateway/channels" }

# WASM policy tier (gateway plugin plane — in-process third-party policy code).
# Pinned to v45 to match Core's sandbox dep (apps/core/Cargo.toml) so the tree
# holds ONE wasmtime. Default features (proven to build on this machine via Core);
# the sandbox posture comes entirely from the runtime `Config`/`Linker`/`StoreLimits`
# (zero-import linker, NO WASI, fuel + epoch + memory caps), NOT from Cargo features,
# so trimming features would buy no security and risk the build. Untrusted policy
# modules run here; the hardened host is `src/wasm_policy/`. NOTE: this is mirrored
# fresh (Core's spike has none of the fuel/epoch/limit hardening) — the shared
# `ryu-wasm-host` crate that would dedupe this AND retrofit Core is a documented
# follow-up (see src/wasm_policy/mod.rs).
wasmtime = "45"

# OpenTelemetry seam (#540, P1): mirrors Core's seam (apps/core/Cargo.toml). The
# vendor-neutral instrumentation export path. `tracing-opentelemetry` 0.33 bridges
# the existing `tracing` spans into OTel; it pins `opentelemetry` ^0.32, so the
# whole family is pinned to 0.32 to keep ONE `opentelemetry` in the tree (a version
# skew pulls two and breaks the layer's trait bounds). OTLP/HTTP-protobuf only
# (`http-proto` + `reqwest-client`) so we avoid tonic/grpc — Axiom and most
# collectors speak OTLP/HTTP. The exporter is installed ONLY on consent (see
# main.rs); with the flag off nothing egresses and the local `audit/` SQLite sink
# is untouched. The backend is a swappable config value (`OTEL_EXPORTER_OTLP_ENDPOINT`),
# never a lock.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.33"

# Crash reporting tier (#544, P3) — Sentry for Rust PANICS ONLY. The gateway has no
# `PreferencesStore`, so it reads `RYU_CRASH_REPORTS_ENABLED` + a DSN from env;
# Core's `gateway_spawn_env()` forwards the user's desktop consent + DSN into these
# env vars when it spawns the gateway as a sidecar, so the gateway tier follows the
# same `crash-reports-enabled` pref. Same minimal feature set as Core (panic
# integration only, NO `sentry-tracing`/`sentry-log`) + a home-dir path scrub.
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "native-tls"] }

[dev-dependencies]
# WAT → wasm compilation for the wasm-policy test guests (proof + malicious-guest
# fixtures authored inline as `.wat`, no wasm32 toolchain / committed binary blob).
wat = "1"
