[package]
name = "ghost"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "ghost"
path = "src/main.rs"

[dependencies]
ghost-core  = { path = "../../crates/ghost-core" }
ghost-eyes  = { path = "../../crates/ghost-eyes" }
ghost-hands = { path = "../../crates/ghost-hands" }

tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap       = { version = "4", features = ["derive"] }
base64     = "0.22"
image      = "0.25"
imageproc  = "0.25"
dirs       = "6"
chrono     = "0.4"

ort = { version = "2.0.0-rc.12", optional = true }

[features]
default = []
ort     = ["dep:ort"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

