[project]
name = "ryu-tts-sidecar"
version = "0.1.0"
description = "Ryu's universal multi-engine TTS sidecar (Core-managed inference runtime)"
requires-python = ">=3.10"
# Base server deps only. Each engine's heavy inference deps are optional extras
# so the base install stays light and a missing engine dep never breaks others.
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "numpy>=1.24",
    "anyio>=4.0",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
# `pip install -e ".[kitten]"` etc. — install just the engines you want.
kitten = ["kittentts"]
pocket = ["pocket-tts"]
all = ["kittentts", "pocket-tts"]

[project.scripts]
ryu-tts = "ryu_tts.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ryu_tts"]
