[package]
name = "ghost-hands"
version = "0.0.1"
edition = "2021"

[lib]
name = "ghost_hands"

[dependencies]
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "time"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc2 = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
evdev = "0.12"
