[package]
name = "ghost-permissions"
version = "0.0.2"
edition = "2021"
description = "Cross-platform check/request for the OS capabilities Ghost needs (UI automation + screen capture)."
license = "Apache-2.0"
repository = "https://github.com/amajorai/ghost"

[lib]
name = "ghost_permissions"

[dependencies]

# macOS links AppKit/CoreGraphics frameworks directly via #[link]; no crate deps.
# Windows and Linux need no external crates — these capabilities are ungated
# (X11/DXGI) or mediated by the compositor at runtime (Wayland), which we only
# detect, not drive.
