[package]
name = "ryu-sdk-ffi"
version = "0.0.2"
edition = "2021"
description = "C-ABI surface over the ryu-sdk Rust core, consumed by the Go (cgo) binding and any other C-FFI client."
license = "Apache-2.0"

[lib]
name = "ryu_sdk_ffi"
# staticlib for cgo static linking; cdylib for dynamic loading; rlib so the
# C-ABI surface is unit-testable from Rust (and reusable by Rust consumers).
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ryu-sdk = { path = "../ryu-sdk", version = "0.0.1" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
