[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[features]
# Retained for backward compat; no longer a gate since tauri-plugin-global-shortcut
# is now a required dependency shipped as part of the companion window (#195).
companion-spike = []
# Builds the "Ryu Dev" variant: `profile::name()` reports "dev" even when
# RYU_PROFILE is unset, so a packaged dev build talks to the dev Core (:8980) and
# uses ~/.ryu-dev. Pair with `--config src-tauri/tauri.dev.conf.json` (distinct
# bundle id + product name). OFF by default → release builds are byte-identical.
dev-variant = []

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-decorum = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Deep linking: register the `ryu://` scheme so links from a browser open the
# app (cold start) or focus the running one (warm start). On Windows/Linux the
# OS spawns a fresh process with the URL as argv; single-instance (with the
# `deep-link` feature) forwards it to the live instance and fires `onOpenUrl`.
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-mcp-bridge = "0.12.0"
# Shared single-source-of-truth for the automation permission gates (Accessibility
# + Screen Recording). The same crate backs the ghost CLI, Core, and the sidecar.
ghost-permissions = { path = "../../../crates/ghost/permissions" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dirs = "5"
which = "7"
anyhow = "1"
futures = { version = "0.3", default-features = false, features = ["executor"] }
tracing = "0.1"
sysinfo = { version = "0.33", features = ["system"] }
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# macOS: re-add the native titled style mask so the traffic-light buttons exist
# before decorum positions them (see `configure_macos_titlebar` in lib.rs).
# Pinned to 0.25 to share the same build decorum already links.
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
