[package]
name = "ryu-activity"
version = "0.0.9"
edition = "2021"
license = "Apache-2.0"
description = "Unified activity-feed primitive for Ryu: the cross-module timeline of everything a node did (monitor alerts, quest completions, approvals, meetings, runs, manual notes) — the `ActivityItem`/`ActivityLevel` v1 contract plus the SQLite-backed `ActivityStore` (persist + newest-first cursor paging + a broadcast fan-out to the `/api/activity/stream` SSE feed). An extracted Core capability crate; in-process by default and consumed as a NON-optional path dependency (the store opens at boot, backs a `ServerState` field, and the `/api/activity*` routes are always mounted). `ActivityStore::open` takes an explicit db path, so the crate has ZERO dependency on apps/core — the default-path choice (`~/.ryu/activity.db`) stays Core-side wiring. The per-engine event mappers (`from_monitor_alert`/`from_quest_event`/…) stay in apps/core because they consume Core types (monitors/approvals/meetings/quests)."
repository = "https://github.com/amajorai/ryu"

# Versions are matched to apps/core/Cargo.toml so there is no version skew when
# Core links this crate in-process. This crate has ZERO dependency on apps/core.
[dependencies]
anyhow = "1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
# sync: `broadcast` + `Mutex` guard the store; the SSE fan-out lives here.
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"
