[package]
name = "ryu-composio"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "Composio integration orchestration (Core side): the user's Composio account seam. Owns the preferences-first API-key resolver, the toolkit/action/trigger catalog client, connection initiate/status, the persisted trigger-subscription store (poll + fail-closed HMAC-SHA256 webhook verification), and the MCP execute-action HTTP path with connection-required elicitation detection. An extracted Core capability crate — in-process default (no IPC on any hot path). The only workflow/agent-engine couplings (run a workflow / run an agent when a trigger fires) are inverted through the ComposioHost trait so this crate has ZERO dependency on apps/core. The gateway's governed-egress composio execute is a separate package."
repository = "https://github.com/amajorai/ryu"

# Versions are matched to apps/core/Cargo.toml so the in-process consumption by
# Core has no version skew. This crate has ZERO dependency on apps/core.
[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
