[package]
name = "ryu-eval-code"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "Core-side code evaluators for Ryu: runs a user (input, output, expected, vars) -> {score} function in an isolated runtime (JS via the deny-all Deno sandbox, Python via the swappable sandbox backend) to score one eval case. An extracted Core capability crate with ZERO dependency on apps/core."
repository = "https://github.com/amajorai/ryu"

# Core-side **code evaluators** (unified-evaluator plan, P4), extracted verbatim
# from `apps/core/src/eval_code`. Runs a user `(input, output, expected, vars) ->
# {score}` function in an isolated runtime (JS via the deny-all Deno sandbox,
# Python via the swappable sandbox backend or a host fallback) to score one eval
# case, then merges the real scores into the gateway's eval-run response. Code
# execution is a Core capability, so this stays a library crate on the Core hot
# path — it has ZERO dependency on `apps/core`.
[features]
# Mirrors apps/core: JS code evaluators need the Deno tool-exec backend. Default
# ON so `cargo test -p ryu-eval-code` exercises the JS path; forwarded to
# ryu-tool-exec. With it OFF, `run_js` returns an honest `executed:false` skip.
default = ["tool-exec-deno"]
tool-exec-deno = ["ryu-tool-exec/tool-exec-deno"]

[dependencies]
ryu-tool-exec = { path = "../tool-exec", default-features = false, version = "0.0.6" }
ryu-sandbox = { path = "../sandbox", version = "0.0.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "process", "time", "rt", "macros", "sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
