[package]
name = "ryu-kernel-contracts"
version = "0.0.7"
edition = "2021"
description = "Ryu kernel contracts — the single, pure-data definition of the plugin.json manifest model (types + validation) shared by apps/core and the Ryu SDK. No I/O, no runtime deps; serde/schemars only."
license = "Apache-2.0"
repository = "https://github.com/amajorai/ryu"

[lib]
name = "ryu_kernel_contracts"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
semver = "1"
